--- a/currency_mogul/templates/currency_mogul/base.html
+++ b/currency_mogul/templates/currency_mogul/base.html
@@ -38,12 +38,12 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
+          <a class="nav-link active" href="{% url 'currency-index' %}">Home
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Currency Converter</a>
+          <a class="nav-link" href="{% url 'currency-converter' %}">Currency Converter</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'currency-historical' %}">Historical Graphs</a>
