--- a/memory_crystal/templates/memory_crystal/base.html
+++ b/memory_crystal/templates/memory_crystal/base.html
@@ -12,8 +12,6 @@
         referrerpolicy="no-referrer"/>
   <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
@@ -38,15 +36,15 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="{% url 'currency-index' %}">Home
+          <a class="nav-link active" href="{% url 'memory-index' %}">Home
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'currency-converter' %}">Currency Converter</a>
+          <a class="nav-link" href="{% url 'currency-converter' %}">Memos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'currency-historical' %}">Historical Graphs</a>
+          <a class="nav-link" href="{% url 'currency-historical' %}">Birthdays</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -69,6 +67,8 @@
     </div>
   </div>
 </nav>
+{% load static %}
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 {% block content %}{% endblock %}
 </body>
 </html>
