--- a/memory_crystal/templates/memory_crystal/base.html
+++ b/memory_crystal/templates/memory_crystal/base.html
@@ -12,6 +12,8 @@
         referrerpolicy="no-referrer"/>
   <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+<!--  TinyMCE widget enablers-->
+  {{ np_form.media }}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
@@ -25,6 +27,7 @@
             <path d="M168.5 72L256 165l87.5-93h-175zM383.9 99.1L311.5 176h129L383.9 99.1zm50 124.9H256 78.1L256 420.3 433.9 224zM71.5 176h129L128.1 99.1 71.5 176zm434.3 40.1l-232 256c-4.5 5-11 7.9-17.8 7.9s-13.2-2.9-17.8-7.9l-232-256c-7.7-8.5-8.3-21.2-1.5-30.4l112-152c4.5-6.1 11.7-9.8 19.3-9.8H376c7.6 0 14.8 3.6 19.3 9.8l112 152c6.8 9.2 6.1 21.9-1.5 30.4z"/>
           </svg> The Memory Crystal
         </a>
+    </a>
     <button class="navbar-toggler"
             type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarColor01"
