Memory crystal all memo view with pagination
Set up a view for all memos with good-looking pagination. Played around with JS and making a Django API but shelves it for now.

--- a/memory_crystal/templates/memory_crystal/base.html
+++ b/memory_crystal/templates/memory_crystal/base.html
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'currency-converter' %}">Memos</a>
+          <a class="nav-link" href="{% url 'memos-all' %}">Memos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'currency-historical' %}">Birthdays</a>
@@ -72,6 +72,30 @@
 </nav>
 {% load static %}
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+  Sidebar
+</button>
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+    </div>
+    <div class="dropdown mt-3">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        Dropdown button
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton" style="">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 {% block content %}{% endblock %}
 </body>
 </html>
