Memory crystal Pagination to inclusion tags, category view
- Pagination moved to inclusion tags
- By category Memo view added
- Some minor restructuring fixes

--- a/memory_crystal/templates/memory_crystal/offcanvas.html
+++ b/memory_crystal/templates/memory_crystal/offcanvas.html
@@ -8,13 +8,21 @@
   </div>
   <div class="offcanvas-body">
     <div>
+      <h3><b>Memos by category:</b></h3>
       <ul>
         {% for category in all_categories %}
         <li>
-          <a> {{ category }}</a>
+          <a href="{% url 'memo-category' category.name %}"> {{ category }}</a>
         </li>
         {% endfor %}
       </ul>
+      <h3><b>Memos by this year's month:</b></h3>
+            <ul>
+        {% for month in all_months %}
+        <li>
+          <a href="{% url 'memo-category' category.name %}"> {{ category }}</a>
+        </li>
+        {% endfor %}
     </div>
     <div class="dropdown mt-3">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
