Memory crystal Memo detail, update, remove
- Memo detail page and update, remove functionality via CBV
- Links to newly created views inserted.

--- a/memory_crystal/templates/memory_crystal/base.html
+++ b/memory_crystal/templates/memory_crystal/base.html
@@ -14,6 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <!--  TinyMCE widget enablers-->
   {{ np_form.media }}
+  {{ form.media }}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
