--- a/memory_crystal/templates/memory_crystal/index.html
+++ b/memory_crystal/templates/memory_crystal/index.html
@@ -19,7 +19,7 @@
         <div class="tab-pane fade active show" id="memos" role="tabpanel">
           {% for memo in recent_memos %}
             {% if memo.title %}
-              <h3>{{ memo.title }}</h3>
+              <h3><a href="{% url 'memo-detail' memo.slug %}">{{ memo.title }}</a></h3>
             {% endif %}
               <p><span class="badge bg-primary"><b>Created on:</b></span> {{ memo.pub_date }}. <span class="badge bg-primary"><b>Last updated:</b></span> {{ memo.last_modified }}</p>
               <p><b>Categories:</b> {{ memo.all_categories }}</p>
@@ -35,11 +35,10 @@
             </li>
             {% endfor %}
           </ul>
-
         </div>
         <div class="tab-pane fade" id="notepad" role="tabpanel">
           <div class="fieldWrapper">
-            <form action="" method="post">
+            <form method="post">
               {% csrf_token %}
               {{ np_form | crispy }}
               <input type="submit" class="btn btn-primary" value="Save memo">
