Memory Crystal Birthday Views
- Added List and Detail views for birthdays based on CBV;
- Added forms for future update, delete, create views;
- Minor fixes and links added to memo templates.

--- a/memory_crystal/templates/memory_crystal/base.html
+++ b/memory_crystal/templates/memory_crystal/base.html
@@ -48,7 +48,7 @@
           <a class="nav-link" href="{% url 'memos-all' %}">Memos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'currency-historical' %}">Birthdays</a>
+          <a class="nav-link" href="{% url 'birthdays-all' %}">Birthdays</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
