--- a/currency_mogul/templates/currency_mogul/historical-rates.html
+++ b/currency_mogul/templates/currency_mogul/historical-rates.html
@@ -29,16 +29,18 @@
                         <input list="currencies_from" id="from_curr" type="text" placeholder="EUR" name="from_curr">
                         <datalist id="currencies_from">
                             {% for currency in all_currencies.keys %}
-                                <option value="{{ currency }}">
-                            {% endfor %}
+                                <option value="{{ currency }}"></option>
+                                    {% endfor %}
+                        </datalist>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mt-4" for="to_curr">To currency:</label>
                         <input list="currencies_to" id="to_curr" type="text" placeholder="USD" name="to_curr">
                         <datalist id="currencies_to">
                             {% for currency in all_currencies.keys %}
-                                <option value="{{ currency }}">
+                            <option value="{{ currency }}"></option>
                             {% endfor %}
+                        </datalist>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mt-4" for="amount">Amount</label>
@@ -55,6 +57,6 @@
                     <button type="submit" class="btn btn-primary">Get graph</button>
                 </form>
         </div>
-
+    </div>
 </div>
 {% endblock %}
