--- a/memory_crystal/templates/memory_crystal/birthday_detail.html
+++ b/memory_crystal/templates/memory_crystal/birthday_detail.html
@@ -1,22 +1,58 @@
 {% extends 'memory_crystal/base.html' %}
 {% block content %}
+
 <div class="container">
     <div class="row">
         <div class="col-12">
             <h2>{{ birthday.person }}'s Birthday</h2>
+            <br>
             <h3>Date: {{ birthday.bdate }}</h3>
+            <br>
+            <a type="button" class="btn btn-primary" href="{% url 'birthday-edit' birthday.id %}">Edit birthday</a>
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-modal">Delete birthday</button>
+            <br>
+            <h2>Add a note:</h2>
+            <div class="fieldWrapper">
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" class="btn btn-primary" value="Save note">
+                </form>
+            </div>
+            <hr>
             <h3>Notes:</h3>
-            <ul>
-                {% for note in birthday.notes.all %}
-                <li>
-                    <p><span class="badge bg-primary"><b>Created on:</b></span> {{ note.pub_date }}</p>
-                    <p><span class="badge bg-primary"><b>Title:</b></span>{{ note.title }}</p>
-                    <p>{{ note.content | safe }}</p>
-                    <hr>
-                </li>
-                {% endfor %}
-            </ul>
+            {% for note in birthday.notes.all %}
+                <p><span class="badge bg-primary"><b>Created on:</b></span> {{ note.pub_date }}</p>
+                <p><span class="badge bg-primary"><b>Title:</b></span>{{ note.title }}</p>
+                <p>{{ note.content | safe }}</p>
+                <a type="button" class="btn btn-primary" href="{% url 'birthdaynote-edit' note.id %}">Edit note</a>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-modal">Delete note</button>
+                <hr>
+                <div class="modal" id="delete-modal" tabindex="-1" aria-labelledby="delete-modal-label" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="delete-modal-label">Delete Memo</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true"></span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Are you sure you want to delete this note? This action cannot be undone.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <form action="{% url 'birthdaynote-delete' note.id %}" method="post">
+                                    {% csrf_token %}
+                                    <input type="submit" class="btn btn-primary" value="Yes">
+                                </form>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 </div>
+
 {% endblock %}
