--- a/memory_crystal/templates/memory_crystal/birthday_list.html
+++ b/memory_crystal/templates/memory_crystal/birthday_list.html
@@ -1,5 +1,6 @@
 {% extends 'memory_crystal/base.html' %}
 {% block content %}
+{% load crispy_forms_tags %}
 <div class="container">
     <div class="row">
         <div class="col-8">
@@ -22,6 +23,15 @@
                   {% endfor %}
                   </tbody>
                 </table>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="fieldWrapper">
+                <form method="post">
+                    {% csrf_token %}
+                    {{ bd_form | crispy }}
+                    <input type="submit" class="btn btn-primary" value="Save birthday">
+                </form>
             </div>
         </div>
     </div>
