--- a/overseer/templates/overseer/base.html
+++ b/overseer/templates/overseer/base.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <!--  TinyMCE widget enablers-->
+  {{ form.media }}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
