--- a/weatherman/templates/weatherman/index.html
+++ b/weatherman/templates/weatherman/index.html
@@ -1,72 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
-
 <head>
+    {% block title %}
+  <title>The Weatherman</title>
+    {% endblock %}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.2/darkly/bootstrap.min.css"
         integrity="sha512-JjQ+gz9+fc47OLooLs9SDfSSVrHu7ypfFM7Bd+r4dCePQnD/veA7P590ovnFPzldWsPwYRpOK1FnePimGNpdrA=="
         crossorigin="anonymous"
-        referrerpolicy="no-referrer" />
-  <title>Weather App </title>
+        referrerpolicy="no-referrer"/>
+  <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
-
 <body>
-  <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-    <div class="container">
-      <a href="../" class="navbar-brand">Weather App <span style="color: rgb(39, 117, 161);"> <strong> - Django
-            Framework</strong>
-        </span> </a>
-      <a href="https://openweathermap.org" class="navbar-tech">OpenWeather - Get Your API</a>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'homepage' %}">
+          <svg xmlns="http://www.w3.org/2000/svg"
+               height="16"
+               width="16"
+               viewBox="0 0 512 512">
+            <path d="M168.5 72L256 165l87.5-93h-175zM383.9 99.1L311.5 176h129L383.9 99.1zm50 124.9H256 78.1L256 420.3 433.9 224zM71.5 176h129L128.1 99.1 71.5 176zm434.3 40.1l-232 256c-4.5 5-11 7.9-17.8 7.9s-13.2-2.9-17.8-7.9l-232-256c-7.7-8.5-8.3-21.2-1.5-30.4l112-152c4.5-6.1 11.7-9.8 19.3-9.8H376c7.6 0 14.8 3.6 19.3 9.8l112 152c6.8 9.2 6.1 21.9-1.5 30.4z"/>
+          </svg> Weatherman
+        </a>
+    </a>
+    <button class="navbar-toggler"
+            type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarColor01"
+            aria-controls="navbarColor01"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link active" href="{% url 'weather-index' %}">Home
+            <span class="visually-hidden">(current)</span>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
-
-  <br><br><br><br><br>
-  <div id="jumbotron" class="jumbotron" style="text-align: center; margin-top:-50px">
-    <h1 class="display-5">The Weatherman </h1>
-    <h5>A weather forecast app.</h5>
-
-    <img src="{% static 'images/weather.png' %}" class="image" style="width:500px; margin-bottom:-50px; ">
-  </div>
-  <br><br><br>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <form method="post" class="col-md">
-      {% csrf_token %}
-
-      <div class=" input-group">
-
-      <input type="text" class="form-control" name="city" placeholder="Enter the name of a city ...">
-      <div class="input-group-btn">
-        <button type="submit" class="btn btn-primary">Search</button>
-      </div>
-      </div>
+</nav>
+<div class="row">
+  <div class="col-12">
+      <form method="post" class="col-md">
+        {% csrf_token %}
+        <div class=" input-group">
+          <input type="text" class="form-control" name="city" placeholder="Enter the name of a city ...">
+          <div class="input-group-btn">
+            <button type="submit" class="btn btn-primary">Search</button>
+          </div>
+        </div>
       </form>
-  </nav>
-  <div class="row">
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
     {% for message in messages %}
     <div class="alert alert-dismissible alert-danger">
       <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
       <strong>There's been an error!</strong> {{ message }}
     </div>
     {% endfor %}
-    {% if city_country and coordinate and temp and pressure and humidity %}
-    <div class="col d-flex justify-content-center">
-      <div class=" card text-white bg-primary mb-6">
-      <div class=" card-body">
-        <h5><span class="badge badge-primary">Country Code :</span> {{ city_country }}</h5>
-        <h5><span class="badge badge-primary">Coordinates [X,Y] :</span> {{ coordinate }}</h5>
-        <h5><span class="badge badge-primary">Temperature in Celsius :</span> {{ temp }}</h5>
-        <h5><span class="badge badge-primary">Pressure :</span> {{ pressure }} </h5>
-        <h5><span class="badge badge-primary">Humidity : </span> {{ humidity }}</h5>
-        <h5><span class="badge badge-primary">Forecast : </span> {{ main }} <img
-            src="http://openweathermap.org/img/w/{{icon}}.png" alt="Image" style="width:70px"></h5>
-        <h5><span class="badge badge-primary">Description : </span> {{ description }}</h5>
-        <h5><span class="badge badge-primary">More info:</span><a href="https://openweathermap.org/city/{{ city_id }}">
-          {{ city_country }}</a></h5>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    {% for forecast in all_forecasts %}
+    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+      <div class="card-header">
+        <b>Forecast</b>
+        <div class="float-end">
+          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#delete-modal">Delete</button>
+        </div>
       </div>
-      {% endif %}
+      <div class="card-body">
+        <h5><span class="badge badge-primary">Country Code :</span> {{ forecast.city_country }}</h5>
+        <h5><span class="badge badge-primary">Coordinates [X,Y] :</span> {{ forecast.coordinate }}</h5>
+        <h5><span class="badge badge-primary">Temperature in Celsius :</span> {{ forecast.temperature }}</h5>
+        <h5><span class="badge badge-primary">Pressure :</span> {{ forecast.pressure }} </h5>
+        <h5><span class="badge badge-primary">Humidity : </span> {{ forecast.humidity }}</h5>
+        <h5><span class="badge badge-primary">Forecast : </span> {{ forecast.type }} <img
+              src="http://openweathermap.org/img/w/{{ forecast.icon }}.png" alt="Image" style="width:70px"></h5>
+        <h5><span class="badge badge-primary">Description : </span> {{ forecast.description }}</h5>
+        <h5><span class="badge badge-primary">Description : </span> {{ forecast.pub_date }}</h5>
+        <h5><span class="badge badge-primary">More info:</span><a href="https://openweathermap.org/city/{{ forecast.city_id }}">
+            {{ forecast.city_country }}</a></h5>
+      </div>
+      <!-- Modal -->
+      <div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Delete forecast data?
+            </div>
+            <div class="modal-footer">
+              <form action="{% url 'weather-delete' forecast.id %}" method="post">
+                  {% csrf_token %}
+                  <input type="submit" class="btn btn-primary" value="Yes">
+              </form>
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
     </div>
+  </div>
+</div>
 </body>
-
 </html>
