--- a/weatherman/templates/weatherman/index.html
+++ b/weatherman/templates/weatherman/index.html
@@ -83,7 +83,7 @@
       <div class="card-body">
         <h5><span class="badge badge-primary">Country Code :</span> {{ forecast.city_country }}</h5>
         <h5><span class="badge badge-primary">Coordinates [X,Y] :</span> {{ forecast.coordinate }}</h5>
-        <h5><span class="badge badge-primary">Temperature in Celsius :</span> {{ forecast.temperature }}</h5>
+        <h5><span class="badge badge-primary">Temperature in Celsius :</span> {{ forecast.temperature }}°C</h5>
         <h5><span class="badge badge-primary">Pressure :</span> {{ forecast.pressure }} </h5>
         <h5><span class="badge badge-primary">Humidity : </span> {{ forecast.humidity }}</h5>
         <h5><span class="badge badge-primary">Forecast : </span> {{ forecast.type }} <img
