--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     {% block title %}
-  <title>The Overseer</title>
+  <title>The Dashboard</title>
     {% endblock %}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
