--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="{% url 'weather-index' %}">Weatherman</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'currency-index' %">Currency Mogul</a>
+          <a class="nav-link" href="{% url 'currency-index' %}">Currency Mogul</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'memory-index' %}">Memory Crystal</a>
