--- a/currency_mogul/templates/currency_mogul/converter.html
+++ b/currency_mogul/templates/currency_mogul/converter.html
@@ -7,7 +7,7 @@
                 <div class="card-header">Result</div>
                 <div class="card-body">
                     <h4 class="card-title">
-                        {% if posting %}
+                        {% if request.method == 'POST' %}
                             {{ from_amount }}{{ money_dict.from }} <b>=></b> {{ money_dict.amount }} {{ money_dict.to }}
                         {% else %}
                             Convert some currency!
@@ -23,14 +23,14 @@
                     <label class="col-form-label mt-4" for="from_curr">From currency:</label>
                     <input list="currencies_from" id="from_curr" type="text" placeholder="EUR" name="from_curr">
                     <datalist id="currencies_from">
-                        {% for currency in all_currencies.keys %}<option value="{{ currency }}">{% endfor %}</option>
+                        {% for currency in all_currencies %}<option value="{{ currency.code }}">{% endfor %}</option>
                     </datalist>
                 </div>
                 <div class="form-group">
                     <label class="col-form-label mt-4" for="to_curr">To currency:</label>
                     <input list="currencies_to" id="to_curr" type="text" placeholder="USD" name="to_curr">
                     <datalist id="currencies_to">
-                        {% for currency in all_currencies.keys %}<option value="{{ currency }}">{% endfor %}</option>
+                        {% for currency in all_currencies %}<option value="{{ currency.code }}">{% endfor %}</option>
                     </datalist>
                 </div>
                 <div class="form-group">
