Dashboard WeatherForecast bugfix
Fixed an iteration bug that would pop up sometimes when loading the homepage template.

--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -41,6 +41,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'overseer-index' %}">Overseer</a>
         </li>
+        <li class="nav-item">
+        </li>
       </ul>
     </div>
   </div>
