--- a/memory_crystal/templates/memory_crystal/index.html
+++ b/memory_crystal/templates/memory_crystal/index.html
@@ -49,15 +49,13 @@
     </div>
   </div>
     <div class="col-2">
-      {% for message in messages %}
-      <div class="alert alert-dismissible alert-{% if message.tags == 'info' %}info
-      {% elif message.tags == 'warning' %}warning{% elif message.tags == 'error' %}danger
-      {% elif message.tags == 'success' %}success{% endif %}">
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        <h4 class="alert-heading">Warning!</h4>
-        <p class="mb-0">{{ message }}</p>
-      </div>
+      <button class="btn btn-lg btn-warning"><b>Birthday reminders:</b></button>
+      {% for birthday in ordered_birthdays %}
+        {% if birthday.soon %}
+          <a href="{% url 'birthday-detail' birthday.id %}"><p class="text-{{ birthday.soon }}"><b>{{ birthday }}</b></p></a>
+        {% endif %}
       {% endfor %}
+      </div>
     </div>
   </div>
 </div>
